fixed z-index issue with navigation and hero text - 28

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -360,7 +360,7 @@ header{
     }
     .hero-content{
         position: relative;
-        z-index: 29;
+        z-index: 28;
         &.w-50{
             @include media-breakpoint-down(sm){
                 width: 100% !important;
